--- a/src/components/Meals/AvialableMeals.module.css
+++ b/src/components/Meals/AvialableMeals.module.css
@@ -5,12 +5,15 @@
     animation: meals-appear 1s ease-out forwards;
 }
 
+.MealSLoading{
+    text-align: center;
+    color: white;
+}
 .meals ul {
     list-style: none;
     margin: 0;
     padding: 0;
 }
-
 @keyframes meals-appear {
     from {
         opacity: 0;
