--- a/src/components/Meals/AvialableMeals.module.css
+++ b/src/components/Meals/AvialableMeals.module.css
@@ -5,15 +5,22 @@
     animation: meals-appear 1s ease-out forwards;
 }
 
-.MealSLoading{
+.MealsLoading {
     text-align: center;
     color: white;
 }
+
+.MealError {
+    text-align: center;
+    color: red;
+}
+
 .meals ul {
     list-style: none;
     margin: 0;
     padding: 0;
 }
+
 @keyframes meals-appear {
     from {
         opacity: 0;
